--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@types/node": "12.7.11",
     "@types/react": "^17.0.2",
     "@types/react-beautiful-dnd": "^13.1.2",
+    "@types/react-color": "^3.0.6",
     "@types/react-dom": "^17.0.2",
     "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.0",
     "antd": "^4.15.0",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.8",
     "react-router-dom": "^5.3.0",
